runtime-policies/exec/policy.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicy
metadata:
  name: cluster-policy-deny-exec
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CONNECT"]
      resources:   ["pods/exec"]
  failurePolicy: Fail
  validations:
  - expression: "false"
    message: "exec is not allowed"
    reason: "High"
